-- ============================================================
-- BASE DE DATOS: vamonospues
-- Motor: Oracle XE 21c  |  Schema/User: VAMONOSPUES
-- Ejecutar como: APP_USER (vamonospues) via init automático de Docker
-- SQL Developer: host=localhost  port=1521  service=XEPDB1
-- ============================================================

-- ============================================================
-- SECCIÓN 1: CATÁLOGOS / LOOKUP TABLES
-- ============================================================

CREATE TABLE ESTADO_USUARIO (
    ID_EST          NUMBER(10)    NOT NULL,
    NOMBRE_EST      VARCHAR2(20)  NOT NULL,
    DESCRIPCION_EST VARCHAR2(150) NOT NULL,
    CONSTRAINT PK_ESTADO_USUARIO PRIMARY KEY (ID_EST)
);

CREATE TABLE ESTADO_VEHICULO (
    ID_ESV          NUMBER(10)    NOT NULL,
    NOMBRE_ESV      VARCHAR2(20)  NOT NULL,
    DESCRIPCION_ESV VARCHAR2(150) NOT NULL,
    CONSTRAINT PK_ESTADO_VEHICULO PRIMARY KEY (ID_ESV)
);

CREATE TABLE ESTADO_RUTA (
    ID_ESR          NUMBER(10)    NOT NULL,
    NOMBRE_ESR      VARCHAR2(30)  NOT NULL,
    DESCRIPCION_ESR VARCHAR2(150) NOT NULL,
    CONSTRAINT PK_ESTADO_RUTA PRIMARY KEY (ID_ESR)
);

CREATE TABLE ESTADO_SOLICITUD (
    ID_ESS          NUMBER(10)    NOT NULL,
    NOMBRE_ESS      VARCHAR2(50)  NOT NULL,
    DESCRIPCION_ESS VARCHAR2(120) NOT NULL,
    CONSTRAINT PK_ESTADO_SOLICITUD PRIMARY KEY (ID_ESS)
);

CREATE TABLE ESTADO_CUR (
    ID_CUR          NUMBER(10)    NOT NULL,
    NOMBRE_CUR      VARCHAR2(30)  NOT NULL,
    DESCRIPCION_CUR VARCHAR2(150) NOT NULL,
    CONSTRAINT ESTADO_CUR_PK PRIMARY KEY (ID_CUR)
);

CREATE TABLE TIPO_TRANSACCION (
    ID_TIT          NUMBER(10)   NOT NULL,
    NOMBRE_TIT      VARCHAR2(20) NOT NULL,
    DESCRIPCION_TIT VARCHAR2(50) NOT NULL,
    CONSTRAINT PK_TIPO_TRANSACCION PRIMARY KEY (ID_TIT)
);

CREATE TABLE METODO_PAGO (
    ID_MPA     NUMBER(10)   NOT NULL,
    NOMBRE_MPA VARCHAR2(30) NOT NULL,
    CONSTRAINT PK_METODO_PAGO PRIMARY KEY (ID_MPA)
);

CREATE TABLE MARCA_VEHICULO (
    ID_MAR     NUMBER(10)   NOT NULL,
    NOMBRE_MAR VARCHAR2(25) NOT NULL,
    CONSTRAINT PK_MARCA_VEHICULO PRIMARY KEY (ID_MAR)
);

CREATE TABLE MODELO_VEHICULO (
    ID_MOD     NUMBER(10)   NOT NULL,
    NOMBRE_MOD VARCHAR2(50) NOT NULL,
    ANIO_MOD   NUMBER(4)    NOT NULL,
    CONSTRAINT PK_MODELO_VEHICULO PRIMARY KEY (ID_MOD)
);

CREATE TABLE COLOR_VEHICULO (
    ID_COL     NUMBER(10)   NOT NULL,
    NOMBRE_COL VARCHAR2(30) NOT NULL,
    CONSTRAINT PK_COLOR_VEHICULO PRIMARY KEY (ID_COL)
);

CREATE TABLE PERFIL (
    ID_PER            NUMBER(10)    NOT NULL,
    NOMBRE_PER        VARCHAR2(15)  NOT NULL,
    DESCRIPCION_PER   VARCHAR2(150) NOT NULL,
    FECHA_CREACION_PER DATE         NOT NULL,
    CONSTRAINT PERFIL_PK PRIMARY KEY (ID_PER)
);

-- ============================================================
-- SECCIÓN 2: MENÚ Y PERMISOS
-- ============================================================

CREATE TABLE MENU (
    ID_MEN       NUMBER(10)    NOT NULL,
    URL_MEN      VARCHAR2(500) NOT NULL,
    NOMBRE_MEN   VARCHAR2(50)  NOT NULL,
    ID_PADRE_MEN NUMBER(10)    NULL,
    ORDEN_MEN    NUMBER(10)    NOT NULL,
    CONSTRAINT PK_MENU PRIMARY KEY (ID_MEN),
    CONSTRAINT FK_MENU_PADRE FOREIGN KEY (ID_PADRE_MEN) REFERENCES MENU(ID_MEN)
);

CREATE TABLE MENU_PERFIL (
    ID_MENU_MEP   NUMBER(10)  NOT NULL,
    ID_PERFIL_MEP NUMBER(10)  NOT NULL,
    INSERTAR      VARCHAR2(1) NOT NULL,
    ACTUALIZAR    VARCHAR2(1) NOT NULL,
    ELIMINAR      VARCHAR2(1) NOT NULL,
    CONSULTAR     VARCHAR2(1) NOT NULL,
    CONSTRAINT PK_MENU_PERFIL    PRIMARY KEY (ID_MENU_MEP, ID_PERFIL_MEP),
    CONSTRAINT FK_MEP_MENU       FOREIGN KEY (ID_MENU_MEP)   REFERENCES MENU(ID_MEN),
    CONSTRAINT FK_MEP_PERFIL     FOREIGN KEY (ID_PERFIL_MEP) REFERENCES PERFIL(ID_PER),
    CONSTRAINT CK_MEP_INSERTAR   CHECK (INSERTAR   IN ('S','N')),
    CONSTRAINT CK_MEP_ACTUALIZAR CHECK (ACTUALIZAR IN ('S','N')),
    CONSTRAINT CK_MEP_ELIMINAR   CHECK (ELIMINAR   IN ('S','N')),
    CONSTRAINT CK_MEP_CONSULTAR  CHECK (CONSULTAR  IN ('S','N'))
);

-- ============================================================
-- SECCIÓN 3: USUARIO Y AUTENTICACIÓN
-- ============================================================

CREATE TABLE USUARIO (
    DOCUMENTO_USU        VARCHAR2(10)  NOT NULL,
    NOMBRES_USU          VARCHAR2(80)  NOT NULL,
    PRIMER_APELLIDO_USU  VARCHAR2(40)  NOT NULL,
    SEGUNDO_APELLIDO_USU VARCHAR2(40)  NULL,
    CORREO_USU           VARCHAR2(150) NOT NULL,
    NUMERO_TELEFONO_USU  VARCHAR2(13)  NOT NULL,
    FECHA_NACIMIENTO_USU DATE          NOT NULL,
    CONTRASENA_USU       VARCHAR2(100) NOT NULL,
    FOTO_URL_USU         VARCHAR2(500) NOT NULL,
    SALDO_CARTERA_USU    NUMBER(7,2)   DEFAULT 0 NOT NULL,
    FECHA_CREACION_USU   DATE          DEFAULT SYSDATE NOT NULL,
    ID_EST_USU           NUMBER(10)    NOT NULL,
    UPDATED_AT_USU       DATE          DEFAULT SYSDATE NOT NULL,
    CONSTRAINT PK_USUARIO      PRIMARY KEY (DOCUMENTO_USU),
    CONSTRAINT UK_USU_CORREO   UNIQUE (CORREO_USU),
    CONSTRAINT FK_USU_ESTADO   FOREIGN KEY (ID_EST_USU) REFERENCES ESTADO_USUARIO(ID_EST)
);

CREATE TABLE VERIFICACION_CORREO (
    ID_VER               NUMBER(10)   NOT NULL,
    DOCUMENTO_USU_VER    VARCHAR2(10) NOT NULL,
    CODIGO_VER           VARCHAR2(6)  NOT NULL,
    FECHA_EXPIRACION_VER DATE         NOT NULL,
    USADO_VER            VARCHAR2(1)  DEFAULT 'N' NOT NULL,
    FECHA_CREACION_VER   DATE         DEFAULT SYSDATE NOT NULL,
    CONSTRAINT PK_VERIFICACION_CORREO PRIMARY KEY (ID_VER),
    CONSTRAINT FK_VER_USUARIO         FOREIGN KEY (DOCUMENTO_USU_VER) REFERENCES USUARIO(DOCUMENTO_USU),
    CONSTRAINT CK_VER_USADO           CHECK (USADO_VER IN ('S','N'))
);

CREATE TABLE USUARIO_PERFIL (
    ID_USP               NUMBER(10)  NOT NULL,
    DOCUMENTO_USU_USP    VARCHAR2(10) NOT NULL,
    ID_PER_USP           NUMBER(10)  NOT NULL,
    CALIFICACION_USU     NUMBER(2,1) DEFAULT 5.0 NOT NULL,
    FECHA_ASIGNACION_USP DATE        DEFAULT SYSDATE NOT NULL,
    CONSTRAINT PK_USUARIO_PERFIL         PRIMARY KEY (ID_USP),
    CONSTRAINT FK_USUARIO_PERFIL_USUARIO FOREIGN KEY (DOCUMENTO_USU_USP) REFERENCES USUARIO(DOCUMENTO_USU),
    CONSTRAINT FK_USUARIO_PERFIL_PERFIL  FOREIGN KEY (ID_PER_USP)        REFERENCES PERFIL(ID_PER)
);

-- ============================================================
-- SECCIÓN 4: VEHÍCULO
-- ============================================================

CREATE TABLE VEHICULO (
    PLACA_VEH            VARCHAR2(6)   NOT NULL,
    DOCUMENTO_USU_VEH    VARCHAR2(10)  NOT NULL,
    ID_MAR_VEH           NUMBER(10)    NOT NULL,
    ID_MOD_VEH           NUMBER(10)    NOT NULL,
    ID_COL_VEH           NUMBER(10)    NOT NULL,
    ID_EST_VEH           NUMBER(10)    NOT NULL,
    LICENCIA_URL_VEH     VARCHAR2(500) NOT NULL,
    VEHICULO_URL_VEH     VARCHAR2(500) NOT NULL,
    LIC_TRANSITO_URL_VEH VARCHAR2(500) NOT NULL,
    SOAT_URL_VEH         VARCHAR2(500) NOT NULL,
    FECHA_REGISTRO_VEH   DATE          DEFAULT SYSDATE NOT NULL,
    UPDATED_AT_VEH       DATE          DEFAULT SYSDATE NOT NULL,
    CONSTRAINT PK_VEHICULO    PRIMARY KEY (PLACA_VEH),
    CONSTRAINT FK_VEH_USUARIO FOREIGN KEY (DOCUMENTO_USU_VEH) REFERENCES USUARIO(DOCUMENTO_USU),
    CONSTRAINT FK_VEH_MARCA   FOREIGN KEY (ID_MAR_VEH)        REFERENCES MARCA_VEHICULO(ID_MAR),
    CONSTRAINT FK_VEH_MODELO  FOREIGN KEY (ID_MOD_VEH)        REFERENCES MODELO_VEHICULO(ID_MOD),
    CONSTRAINT FK_VEH_COLOR   FOREIGN KEY (ID_COL_VEH)        REFERENCES COLOR_VEHICULO(ID_COL),
    CONSTRAINT FK_VEH_ESTADO  FOREIGN KEY (ID_EST_VEH)        REFERENCES ESTADO_VEHICULO(ID_ESV)
);

-- ============================================================
-- SECCIÓN 5: RUTA Y PUNTOS DE ENCUENTRO
-- ============================================================

CREATE TABLE RUTA (
    ID_RUT               NUMBER(10)  NOT NULL,
    PLACA_VEH_RUT        VARCHAR2(6) NOT NULL,
    ID_USP_RUT           NUMBER(10)  NOT NULL,
    LATITUD_ORIGEN_RUT   NUMBER(9,6) NOT NULL,
    LONGITUD_ORIGEN_RUT  NUMBER(9,6) NOT NULL,
    LATITUD_DESTINO_RUT  NUMBER(9,6) NOT NULL,
    LONGITUD_DESTINO_RUT NUMBER(9,6) NOT NULL,
    HORA_SALIDA_RUT      DATE        NOT NULL,
    CUPOS_TOTALES_RUT    NUMBER(1)   NOT NULL,
    CUPOS_DISPONIBLES_RUT NUMBER(1)  NOT NULL,
    PRECIO_CUPO_RUT      NUMBER(7,2) NOT NULL,
    DISTANCIA_KM_RUT     NUMBER(4,2) NOT NULL,
    ID_EST_RUT           NUMBER(10)  NOT NULL,
    FECHA_CREACION_RUT   DATE        DEFAULT SYSDATE NOT NULL,
    UPDATED_AT_RUT       DATE        DEFAULT SYSDATE NOT NULL,
    CONSTRAINT PK_RUTA              PRIMARY KEY (ID_RUT),
    CONSTRAINT FK_RUT_VEHICULO      FOREIGN KEY (PLACA_VEH_RUT) REFERENCES VEHICULO(PLACA_VEH),
    CONSTRAINT FK_RUT_USP           FOREIGN KEY (ID_USP_RUT)    REFERENCES USUARIO_PERFIL(ID_USP),
    CONSTRAINT FK_RUT_ESTADO        FOREIGN KEY (ID_EST_RUT)    REFERENCES ESTADO_RUTA(ID_ESR),
    CONSTRAINT CK_RUT_CUPOS_TOT     CHECK (CUPOS_TOTALES_RUT >= 1),
    CONSTRAINT CK_RUT_CUPOS_DISP    CHECK (CUPOS_DISPONIBLES_RUT >= 0 AND CUPOS_DISPONIBLES_RUT <= CUPOS_TOTALES_RUT)
);

CREATE INDEX IDX_RUTA_HORA_SALIDA ON RUTA(HORA_SALIDA_RUT);
CREATE INDEX IDX_RUTA_ESTADO      ON RUTA(ID_EST_RUT);

CREATE TABLE PUNTO_ENCUENTRO (
    ID_PUN       NUMBER(10)  NOT NULL,
    ID_RUT_PUN   NUMBER(10)  NOT NULL,
    LATITUD_PUN  NUMBER(9,6) NOT NULL,
    LONGITUD_PUN NUMBER(9,6) NOT NULL,
    ORDEN_PUN    NUMBER(1)   NOT NULL,
    CONSTRAINT PK_PUNTO_ENCUENTRO PRIMARY KEY (ID_PUN, ID_RUT_PUN),
    CONSTRAINT FK_PUN_RUTA        FOREIGN KEY (ID_RUT_PUN) REFERENCES RUTA(ID_RUT)
);

-- ============================================================
-- SECCIÓN 6: SOLICITUD, CUPO Y TRANSACCIONES
-- ============================================================

CREATE TABLE SOLICITUD_CUPO (
    ID_SOL             NUMBER(10)  NOT NULL,
    ID_RUT_SOL         NUMBER(10)  NOT NULL,
    ID_USP_SOL         NUMBER(10)  NOT NULL,
    ID_ESS_SOL         NUMBER(10)  NOT NULL,
    ID_MPA_SOL         NUMBER(10)  NOT NULL,
    MONTO_SOL          NUMBER(7,2) NOT NULL,
    FECHA_CREACION_SOL DATE        DEFAULT SYSDATE NOT NULL,
    CONSTRAINT PK_SOLICITUD_CUPO PRIMARY KEY (ID_SOL),
    CONSTRAINT FK_SOL_RUTA       FOREIGN KEY (ID_RUT_SOL) REFERENCES RUTA(ID_RUT),
    CONSTRAINT FK_SOL_USP        FOREIGN KEY (ID_USP_SOL) REFERENCES USUARIO_PERFIL(ID_USP),
    CONSTRAINT FK_SOL_ESTADO     FOREIGN KEY (ID_ESS_SOL) REFERENCES ESTADO_SOLICITUD(ID_ESS),
    CONSTRAINT FK_SOL_METODO     FOREIGN KEY (ID_MPA_SOL) REFERENCES METODO_PAGO(ID_MPA)
);

CREATE INDEX IDX_SOL_FECHA ON SOLICITUD_CUPO(FECHA_CREACION_SOL);

CREATE TABLE CUPO_RUTA (
    ID_SOL_CRP NUMBER(10) NOT NULL,
    ID_RUT_CRP NUMBER(10) NOT NULL,
    ID_CUR_CRP NUMBER(10) NOT NULL,
    CONSTRAINT PK_CUPO_RUTA    PRIMARY KEY (ID_SOL_CRP, ID_RUT_CRP),
    CONSTRAINT FK_CRP_SOLICITUD FOREIGN KEY (ID_SOL_CRP) REFERENCES SOLICITUD_CUPO(ID_SOL),
    CONSTRAINT FK_CRP_RUTA      FOREIGN KEY (ID_RUT_CRP) REFERENCES RUTA(ID_RUT),
    CONSTRAINT FK_CRP_ESTADO    FOREIGN KEY (ID_CUR_CRP) REFERENCES ESTADO_CUR(ID_CUR)
);

CREATE TABLE TRANSACCIONES_CARTERA (
    ID_TRA                NUMBER(10)   NOT NULL,
    DOCUMENTO_USU_TRA     VARCHAR2(10) NOT NULL,
    ID_TIT_TRA            NUMBER(10)   NOT NULL,
    MONTO_TRA             NUMBER(7,2)  NOT NULL,
    SALDO_RESULTANTE_TRA  NUMBER(7,2)  NOT NULL,
    FECHA_REALIZACION_TRA DATE         DEFAULT SYSDATE NOT NULL,
    CONSTRAINT PK_TRANSACCIONES_CARTERA PRIMARY KEY (ID_TRA),
    CONSTRAINT FK_TRA_USUARIO           FOREIGN KEY (DOCUMENTO_USU_TRA) REFERENCES USUARIO(DOCUMENTO_USU),
    CONSTRAINT FK_TRA_TIPO              FOREIGN KEY (ID_TIT_TRA)        REFERENCES TIPO_TRANSACCION(ID_TIT)
);

CREATE INDEX IDX_TRA_FECHA ON TRANSACCIONES_CARTERA(FECHA_REALIZACION_TRA);

-- ============================================================
-- SECCIÓN 7: HISTORIAL Y CALIFICACIÓN
-- ============================================================

CREATE TABLE HISTORIAL_VIAJE (
    ID_HIS             NUMBER(10)   NOT NULL,
    DOCUMENTO_USU_HIS  VARCHAR2(10) NOT NULL,
    ID_SOL_HIS         NUMBER(10)   NOT NULL,
    ID_RUT_HIS         NUMBER(10)   NOT NULL,
    ROL_VIAJE_HIS      VARCHAR2(10) NOT NULL,
    COSTO_HIS          NUMBER(7,2)  NOT NULL,
    FECHA_CREACION_HIS DATE         DEFAULT SYSDATE NOT NULL,
    CONSTRAINT PK_HISTORIAL_VIAJE PRIMARY KEY (ID_HIS),
    CONSTRAINT FK_HIS_USUARIO     FOREIGN KEY (DOCUMENTO_USU_HIS)       REFERENCES USUARIO(DOCUMENTO_USU),
    CONSTRAINT FK_HIS_CUPO        FOREIGN KEY (ID_SOL_HIS, ID_RUT_HIS) REFERENCES CUPO_RUTA(ID_SOL_CRP, ID_RUT_CRP)
);

CREATE TABLE CALIFICACION (
    ID_CAL                    NUMBER(10)   NOT NULL,
    ID_SOL_CAL                NUMBER(10)   NOT NULL,
    DOCUMENTO_CALIFICADOR_CAL VARCHAR2(10) NOT NULL,
    DOCUMENTO_CALIFICADO_CAL  VARCHAR2(10) NOT NULL,
    ROL_CALIFICADOR_CAL       VARCHAR2(10) NOT NULL,
    PUNTAJE_CAL               NUMBER(2,1)  NOT NULL,
    COMENTARIO_CAL            VARCHAR2(300) NULL,
    FECHA_CREACION_CAL        DATE         DEFAULT SYSDATE NOT NULL,
    ID_SOL_CRP_CAL            NUMBER(10)   NOT NULL,
    ID_RUT_CRP_CAL            NUMBER(10)   NOT NULL,
    CONSTRAINT PK_CALIFICACION       PRIMARY KEY (ID_CAL),
    CONSTRAINT FK_CAL_SOLICITUD      FOREIGN KEY (ID_SOL_CAL)               REFERENCES SOLICITUD_CUPO(ID_SOL),
    CONSTRAINT FK_CAL_CALIFICADOR    FOREIGN KEY (DOCUMENTO_CALIFICADOR_CAL) REFERENCES USUARIO(DOCUMENTO_USU),
    CONSTRAINT FK_CAL_CALIFICADO     FOREIGN KEY (DOCUMENTO_CALIFICADO_CAL)  REFERENCES USUARIO(DOCUMENTO_USU),
    CONSTRAINT FK_CAL_CUPO           FOREIGN KEY (ID_SOL_CRP_CAL, ID_RUT_CRP_CAL) REFERENCES CUPO_RUTA(ID_SOL_CRP, ID_RUT_CRP),
    CONSTRAINT CK_CAL_PUNTAJE        CHECK (PUNTAJE_CAL >= 0.0 AND PUNTAJE_CAL <= 5.0)
);

-- ============================================================
-- SECCIÓN 8: SECUENCIAS (autoincrement en Oracle)
-- ============================================================

CREATE SEQUENCE SEQ_ESTADO_USUARIO      START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_ESTADO_VEHICULO     START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_ESTADO_RUTA         START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_ESTADO_SOLICITUD    START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_ESTADO_CUR          START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_TIPO_TRANSACCION    START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_METODO_PAGO         START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_MARCA_VEHICULO      START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_MODELO_VEHICULO     START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_COLOR_VEHICULO      START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_PERFIL              START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_MENU                START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_VERIFICACION_CORREO START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_USUARIO_PERFIL      START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_RUTA                START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_PUNTO_ENCUENTRO     START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_SOLICITUD_CUPO      START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_TRANSACCIONES       START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_HISTORIAL_VIAJE     START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;
CREATE SEQUENCE SEQ_CALIFICACION        START WITH 1 INCREMENT BY 1 NOCACHE NOCYCLE;